--- a/methods_doc.Rmd
+++ b/methods_doc.Rmd
@@ -3,12 +3,13 @@ title: "Methods for Analyzing Arizona Crime-Free Housing"
 author: "Max Griswold"
 date: "2025-03-11"
 output: 
-  html_document: 
-    toc: true
-    toc_float: true
+  pdf_document: 
+    extra_dependencies: ["makecell", "booktabs"]
 bibliography: az_cfh.bib
 csl: numeric.csl
 link-citations: yes
+linkcolor: blue
+urlcolor: blue
 ---
 
 ```{r setup, include=FALSE}
@@ -17,25 +18,25 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Preface
 
-This document outlines the methods used to analyze Crime-Free Housing (CFH) programs in Arizona. In most instances, these methods follow the approaches used in Griswold et al., 2023 and Griswold et al., 2024. This document is intended for internal QA review at RAND. Accordingly, this document deviates from a conventional method description, assuming the reader has some familiarity with the described methods and aiming to present each approach concisely.
+This document outlines the methods used to analyze Crime-Free Housing (CFH) programs in Arizona. In most instances, these methods follow the approaches used in Griswold et al., 2023 and Griswold et al., 2024. This document is structured for an internal QA review, with a focus on conciseness rather than ean exhaustive method explanation. 
 
-[Section one](#data) describes the data used in this analysis, [section two](#crime) details the methods used to analyze program effects on crime across cities, [section three](#evictions) investigates the impact of CFH on eviction filings within cities, and [section four](#demographics) provides a description of sociodemographic differences across cities and neighborhood blocks with and without CFHs. Each of these sections also contains short-write up of findings to be sent to the AZ republic, describing the results in plain lanugae. [Section five](#audience) concludes with a short-form description of the methods in section 1 -4. This description is intended for general audiences and would be provided to the AZ Republic to be printed along with their reporting.
+[Section one](#data) describes the data used in this analysis, [section two](#crime) details the methods used to analyze program effects on crime across cities, [section three](#evictions) investigates the impact of CFH on eviction filings within cities, and [section four](#demographics) provides a description of sociodemographic differences across cities and neighborhood blocks with and without CFHs. Each of these sections also contains short-write up of findings to be sent to the AZ republic, describing the results in plain language [Section five](#audience) concludes with a short-form description of the methods in section 1 -4. This description is intended for general audiences and would be provided to the AZ Republic to be printed along with their reporting.
 
 ## Section 1. Data {#data}
 
 ### Treatment data {#treat_data}
 
-Treatment data was obtained from AZ Republic, who reviewed ordinances in AZ to determine which sites had active crime-free housing programs. Dates were obtained from public record requests. I reviewed the ordinances, program websites, and public record emails AZ Republic received and found them consistent with the types of records we reviewed for the RAND report. For one site, I was not able to confirm the date or program existence (Bullhead city) and removed this site from the analysis. Data on treated cities and dates are available in the [GitHub repository](https://github.com/maxgriswold/cfh_az/tree/main) within the "data/crime_free_housing" folder. Similar to the RAND report, I restricted treated sites to those which implemented a program between 2011 and 2022, given the availability of 5-year ACS surveys @ACS2023.
+Treatment data was obtained from AZ Republic, who reviewed ordinances in AZ to determine which sites had active crime-free housing programs. Dates were obtained from public record requests. I reviewed the ordinances, program websites, and public record emails AZ Republic received and found them consistent with the types of records we reviewed for the RAND report. For one site, I was not able to confirm the date or program existence (Bullhead City) and removed this site from the analysis. Data on treated cities and dates are available in the [GitHub repository](https://github.com/maxgriswold/cfh_az/tree/main) within the "data/crime_free_housing" folder. Similar to the RAND report, I restricted treated sites to those which implemented a program between 2009 and 2023, given the availability of 5-year ACS surveys @ACS2023.
 
-AZ republic also provided excel sheets which indicates properties certified as crime-free within several cities in 2023. These files were comparable to those used in the RAND report. I geocoded these addresses using a combination of the census API, ArcGIS API, and openstreetmaps API. I validated these geocodes by comparing obtained zip codes with those listed in the address. Geocodes were merged with census TIGER shapefiles to identify which census-block groups contained crime-free housing units.
+AZ republic also provided Excel sheets which indicates properties certified as crime-free within several cities in 2023. These files were comparable to those used in the RAND report. I geocoded these addresses using a combination of the census API, ArcGIS API, and openstreetmaps API. I validated these geocodes by comparing obtained zip codes with those listed in the address. Geocodes were merged with census TIGER shapefiles to identify which census-block groups contained crime-free housing units.
 
 ### Outcome data {#outcome_data}
 
-For outcome data, I followed the same procedures as the RAND report. In more detail:
+For outcome data, I followed the same procedures as the RAND report. All procedures can be found in the [processing code](https://github.com/maxgriswold/cfh_az/blob/main/code/01_prep_data.R). In more detail:
 
 #### Arrests (Total, Assaults, Burglaries)
 
-Data on total crime counts, assaults, and burglaries were obtained from the Uniform Crime Reporting - Summary Reporting System database on reported incidents and arrests, using files prepped by Jacob Kaplan @DVN/OESSD1_2024. I merged these files to law enforcement agencies using the FBI crosswalk database @u.s.bureauofjusticestatisticsLawEnforcementAgency2018, then aggregated counts to the municipal-level. I restricted counts to total incidents, burglary, and assault crimes following suggestions in Kaplan, 2025 @kaplan2025. To ensure data accuracy, I reviewed time trends of crime counts at the municipal-level, marking possible sites as outliers due to implausible trends or lack of reporting within a given year (plots can be [found here](https://github.com/maxgriswold/cfh_az/blob/main/figs/crimes_by_city_year.pdf). I then aggregated assault-types and burglary-type crimes into total categories, and transformed total incidents, assaults, and burglaries into rates per 1k people. Lastly, I merged these aggregate rates with [municipal covariates](#crime) for the years 2011 - 2023.
+Data on total crime counts, assaults, and burglaries were obtained from the Uniform Crime Reporting - Summary Reporting System database on reported incidents and arrests, using files prepped by Jacob Kaplan @DVN/OESSD1_2024. I merged these files to law enforcement agencies using the FBI crosswalk database @u.s.bureauofjusticestatisticsLawEnforcementAgency2018, then aggregated counts to the municipal-level. I restricted counts to total incidents, burglary, and assault crimes following suggestions in Kaplan, 2025 @kaplan2025. To ensure data accuracy, I reviewed [time trends](https://github.com/maxgriswold/cfh_az/blob/main/figs/crimes_by_city_year.pdf) of crime counts at the municipal-level, marking possible sites as outliers due to implausible trends (which included: substantial gaps in reporting years, zero values across the series, or extremely large values) or lack of reporting within a given year.. I then aggregated assault-types and burglary-type crimes into total categories, and transformed total incidents, assaults, and burglaries into rates per 1k people. Lastly, I merged these aggregate rates with [municipal covariates](#crime) for the years 2011 - 2023.
 
 #### Filed evictions
 
@@ -43,12 +44,189 @@ The AZ Republic provided data on filed evictions in Mesa county, which were obta
 
 ### Covariates {#covariate_data}
 
+Using the Census API, I extracted ACS 5-year series variables at the census place and block-group level for the years 2009 - 2023. Variables included median age, total population, population proportions by sex, renter racial/ethnic groups (white, white-only, Hispanic/Latin, indigenous, Asian, Pacific Islander, other), income below 150% of the Federal Poverty Line, and immigration status, number of rental units, number of renting households, and median income. Median income was adjusted to be in 2023 dollars using the [U.S. BLS CPI](https://fred.stlouisfed.org/series/CPIAUCSL) for All Urban Consumers: All Items in U.S. City Average. Covariates were merged with outcome and treatment variables at the municipal level (for arrests) and at the block-group level (for incidents).
+
 ## Section 2. Effect of CFH on Crime {#crime}
 
-## Section 2. Effect of CFH on Evictions {#evictions}
+I followed the general strategy in Griswold, 2023 @griswold2023evaluation to estimate the effect of crime-free housing policies on arrests. Code for this analysis can be found [in the repo](https://github.com/maxgriswold/cfh_az/blob/main/code/02_analyze_crime_effects.R). All analyses were conducted using both all available arrest data, along with restricting the analysis to remove municipalities with implausible arrest trends (see [previous section](#outcome_data). I did not find a meaningful difference in results when restricting the analysis to sites with complete arrest data and chose to display all results removing these outlier locations.
+
+Using a Callaway and Sant'Anna difference-in-difference estimator @callaway2021difference, I estimated unadjusted and adjusted models for total crime rates, total assault rates, and total burglary rates. Adjusted models included controls for population proportions by race/ethnicity, median income (in 2023 dollars), and total population. I estimated models using not-yet-treated groups as controls, computed group-time average effects using a doubly-robust approach, and used models to estimate dynamic treatment effects. Model tables with estimates for relative time following treatment can be found in [the appendix](#csa_estimates). I did not find a large difference in estimated effects across the unadjusted and adjusted models.
+
+I checked [event-study plots](https://github.com/maxgriswold/cfh_az/blob/main/figs/model_results/csa/event_study.pdf) for the possible existence of parallel trends, following recommendations in Roth, 2024 @roth2024interpreting which suggests this approach can be valid if the first year prior to treatment is used as the reference category. I did not notice severe violations of parallel trends in these plots.
+
+Given the small sample size (54 units, 4 treated), I also estimated treatment effects using the augmented synthetic control method @ben2021augmented. In my applied work, I have found this method more reliably estimates unbiased policy effects when there is a small number of treated units and larger number of controls. I continued to estimate both unadjusted and adjusted models for each outcome. For adjusted models, I followed existing recommendations @ben2021augmented- @pickett2022myths to use a ridge regression (L2 regularization) to improve pretreatment fit. To choose $\lambda$ for L2 regularization in each model, I performed a [grid-search](https://github.com/maxgriswold/cfh_az/blob/main/figs/model_results/multisynth/lambda_search_full_data.pdf) over parameter values between 0.01 and 100, selecting values that minimized imbalance. I then estimated dynamic treatment effects for each outcome and model specification, which can be found in [the appendix](#ascm_estimates). I did not find a large difference in estimated effects across the unadjusted and adjusted models.
+
+To validate the model results, I followed recommendations in Abadie, 2021 @abadie2021using and Ben-Michael et al., 2021 @ben2021augmented. Similar to difference-in-differences, I investigated [imbalance plots](https://github.com/maxgriswold/cfh_az/blob/main/figs/model_results/multisynth/balance_plots.pdf) to ensure balance in the pre-treatment periods. Across models, I did not find a significant imbalance in pretreatment years.
+
+I also conducted a placebo test where I set each control unit to be a treated unit with an implementation date equivalent to the first treated unit. I then estimated placebo models for each outcome and specification, comparing the obtained estimate to those in the main model. The [plots show](https://github.com/maxgriswold/cfh_az/blob/main/figs/model_results/multisynth/placebo_tests_outliers_removed.pdf) that estimated effects from the placebo test are aligned with those in the primary model, indicating the effect of treatment is likely due to treatment rather than noise.
+
+Ultimately, both analyses suggest that crime-free housing programs do not have a meaningful effect on total crime rates, total assault crime rates, or total burglary rates in Arizona, which is consistent with the findings in the RAND report. Estimates are consistent across the Callaway and Sant'Anna estimator and the augmented synthetic controls approach. Given the sample size and less precise estimates when using differences-in-differences, I am choosing to present estimates from the augmented synthetic control models using covariates.
+
+Using the estimated effects in the [results table](#ascm_estimates), I calculated the effect of crime-free housing on each outcome as a percentage difference within ever-treated units, shown in figure 1, which I intend to share with the AZ Republic.
+
+![](./figs/estimated_cfh_effects_crime.pdf)
+
+Based on the analysis results, I intend to describe these findings to the AZ republic using the following language:
+
+> Comparing arrest rates between Arizona municipalities with and without crime-free housing programs, both before and after program implementation, we are unable to detect any effect of these programs on total crimes, assaults, or burglaries.
+
+I also intend to provide a simpler figure which plots average outcomes within treated units following treatment and never-treated units. The intention is to demonstrate a similar finding to those in the analysis, using a more interpretable figure for a general audience.
+
+![](./figs/crime_results_simpler.pdf)
+
+## Section 3. Effect of CFH on Evictions {#evictions}
+
+I followed the same procedures as those in Griswold, 2024 @griswold2023evaluation to analyze the effect of crime-free housing on filed evictions within the cities of Chandler, Avondale, and Mesa (the set of cities which had available eviction filing data and data on crime-free housing certified property addresses). All [code for this analysis](https://github.com/maxgriswold/cfh_az/blob/main/code/03_analyze_eviction_effects.R) is available in the repo. 
+
+This approach entailed using a spatial first differences estimator @druckenmiller2018accounting to compare block-groups which had properties certified as crime-free to block-groups which do not contain any crime-free certified rental units. I removed any block-groups which did not contain rental units. Additionally, given there was a larger number of filings compared to the executed evictions analyzed in Griswold, 2024, I transformed the outcome variable into an eviction filing rate per 100 renting households.
+
+I again estimated unadjusted and adjusted models, using the same covariates as those used in [Section 2](#crime). I also estimated models defining treatment as a binary variable (Did the block-group have one or more units certified as crime-free?) and as a continuous variable (How many units were certified as crime-free in the block-group?). As per Griswold, 2024, I estimated each model at a given map angle in 30$^{\circ}$ increments between 0$^{\circ}$ and 360$^{\circ}$. I did not find a difference in estimated results across map angles, and interpreted the average effect across map angles. Estimated effects for each model and city can be found [in the appendix](#sfd_estimates). I did not find a large difference in estimated effects across the unadjusted and adjusted models, or across different parameterizations of treatment. Estimated effects are comparable in magnitude to those in the RAND report. 
+
+To present results to the AZ republic, I am using estimates from the most "conservative" model (continuous treatment using an adjusted specification). Similar to the RAND report, I transformed estimates into an ATT percentage change, based on the average observed eviction filing rate within treated units. 
+
+![](./figs/model_results/sfd/att_eviction_filings.pdf)
+
+Based on the analysis results, I intend to describe these findings to the AZ republic using the following language:
+
+> Comparing eviction filings in blocks with crime-free housing properties to neighboring blocks without crime-free housing, we find that the program increases filed evictions by an average of 37% across studied cities, with the effect varying in each city (22% in Mesa, 24% in Avondale, and 68% in Chandler)
+
+I also intend to provide a simpler figure which plots average eviction filings in treated blocks to eviction filings in untreated blocks. The intention is to make the findings simpler to interpret using the raw data. This figure would be further modified to demonstrate the fraction of the difference attributable to the policy (~2 eviction filings per 100 renting households, as per the estimates [in the appendix](#sfd_estimates)).
+
+![](./figs/average_eviction_filings.pdf)
 
 ## Section 4. Sociodemographic comparisons {#demographics}
 
-## Section 5. General Audience Method Description
+I followed the same procedures as Griswold, 2023 and Griswold, 2024 to investigate sociodemographic differences between treated cities and control cities, and treated block-groups and control block-groups. Code is available [in the repo](https://github.com/maxgriswold/cfh_az/blob/main/code/04_visualize_results.R). 
+
+Using ACS variables, I calculated average observed population proportions by race/ethnicity in 2023, in ever-treated municipalities and never-treated municipalities. I then used Welch's t-test (independent samples with unequal variance) to check whether differences across ever-treated and never-treated groups were statistically significant. The observed population proportions for each city, along with the results from the test are displayed in the figure below. 
+
+![](./figs/demographic_differences_2023.pdf)
+
+I also calculated similar statistics within cities, comparing averages across treated and control block-groups. Results are available [as tables](https://github.com/maxgriswold/cfh_az/blob/main/figs/city_summaries_2023.csv). 
+
+Based on these results, I intend to describe these findings to the AZ republic using the following language:
+
+> In 2023, cities with crime-free housing programs had larger Black and Asian populations than cities without these programs. Within three studied cities, we find that block-groups with certified crime-free housing units had lower median income ($36k less in Mesa, $37k in Chandler, and $28k in Avondale) and more Black households (in Chandler and Mesa) than block-groups without certified units.
+
+## Section 5. General Audience Method Description {#audience}
+
+The AZ republic requested text which described the RAND methods in two to three paragraphs. I intend to send them the following text to describe the approaches (which would be copy-edited by their team, then reviewed by me/RAND).
+
+> To assess the impact of crime-free housing programs, we analyzed crime and eviction trends in Arizona cities with and without these programs. Our analysis relied on data from the FBI Uniform Crime Reporting Program, municipal ordinances, and public records requests. We examined changes in crime rates—including total crime, assaults, and burglaries—before and after these programs were introduced, comparing cities that adopted crime-free housing policies to those that did not. We used two widely accepted statistical approaches: a difference-in-differences method and a synthetic control method, both of which help isolate the program’s effect from other factors that may influence crime trends.
+  To evaluate the impact on evictions, we analyzed court records of filed evictions in three cities—Avondale, Chandler, and Mesa—along with data on rental properties certified as crime-free. Using a spatial first-differences approach, we compared eviction rates in neighborhoods with certified crime-free housing to those in similar nearby neighborhoods without certified properties. This method helps account for underlying differences between neighborhoods, improving the reliability of these comparisons.
+  Finally, we examined demographic differences between cities and neighborhoods with and without crime-free housing programs using data from the U.S. Census Bureau. We compared factors like income, race, and housing characteristics to identify whether these programs are more common in certain types of communities. Statistical tests were used to determine whether observed differences were significant.
 
 ## References
+
+::: {#refs}
+:::
+
+\newpage
+
+## Appendix
+
+### Callaway and Sant'Ann - Dynamic Treatment Effects {#csa_estimates}
+
+\vspace{0.2in}
+Total Crime:
+\vspace{0.2in}
+
+```{=latex}
+\begin{tabular}{rcc}
+\toprule
+ & (1) & (2)\\
+\midrule
+Time Period = 0 & \makecell[c]{11.633$^{***}$\\(4.18)} & \makecell[c]{13.352\\(8.766)}\\
+\addlinespace
+1 & \makecell[c]{8.992\\(6.958)} & \makecell[c]{2.281\\(8.621)}\\
+\addlinespace
+2 & \makecell[c]{10.15$^{*}$\\(5.38)} & \makecell[c]{5.596\\(14.249)}\\
+\addlinespace
+3 & \makecell[c]{3.961\\(3.179)} & \makecell[c]{2.331\\(2.966)}\\
+\addlinespace
+Average & \makecell[c]{8.684$^{***}$\\(3)} & \makecell[c]{5.89$^{**}$\\(2.715)}\\
+\addlinespace\midrule
+Observations & 810 & 810\\
+Clusters & 54 & 54\\
+Adjusted & No & Yes\\
+\bottomrule
+\end{tabular}
+```
+
+\vspace{0.2in}
+Total Assaults:
+\vspace{0.2in}
+
+```{=latex}
+\begin{tabular}{rcc}
+\toprule
+ & (1) & (2)\\
+\midrule
+Time Period = 0 & \makecell[c]{0.498\\(0.977)} & \makecell[c]{1.048\\(1.236)}\\
+\addlinespace
+1 & \makecell[c]{1.639\\(1.771)} & \makecell[c]{0.925\\(1.076)}\\
+\addlinespace
+2 & \makecell[c]{2.033$^{*}$\\(1.189)} & \makecell[c]{0.585\\(1.891)}\\
+\addlinespace
+3 & \makecell[c]{2.216\\(2.015)} & \makecell[c]{-0.281\\(0.729)}\\
+\addlinespace
+Average & \makecell[c]{1.596\\(1.44)} & \makecell[c]{0.57\\(0.574)}\\
+\addlinespace\midrule
+Observations & 810 & 810\\
+Clusters & 54 & 54\\
+Adjusted & No & Yes\\
+\bottomrule
+\end{tabular}
+```
+
+\vspace{0.2in}
+Total Burglaries:
+\vspace{0.2in}
+
+```{=latex}
+\begin{tabular}{rcc}
+\toprule
+ & (1) & (2)\\
+\midrule
+Time Period = 0 & \makecell[c]{0.611\\(1.015)} & \makecell[c]{1.471\\(2.305)}\\
+\addlinespace
+1 & \makecell[c]{1.798\\(1.419)} & \makecell[c]{1.142\\(4.052)}\\
+\addlinespace
+2 & \makecell[c]{2.846\\(2.165)} & \makecell[c]{0.753\\(2.427)}\\
+\addlinespace
+3 & \makecell[c]{0.685\\(0.909)} & \makecell[c]{0.862\\(2.053)}\\
+\addlinespace
+Average & \makecell[c]{1.485\\(1.223)} & \makecell[c]{1.057\\(3.339)}\\
+\addlinespace\midrule
+Observations & 810 & 810\\
+Clusters & 54 & 54\\
+Adjusted & No & Yes\\
+\bottomrule
+\end{tabular}
+```
+
+\vspace{0.2in}
+
+### Augmented Synthetic Control - Dynamic Treatment Effects {#ascm_estimates}
+
+```{=latex}
+\begin{tabular}{rccc}
+\toprule
+ & Total Crimes & Total Assaults & Total Burglaries\\
+\midrule
+Time Period = 0 & \makecell[c]{5.54\\(11.17)} & \makecell[c]{-0.64\\(1.77)} & \makecell[c]{0.41\\(1.61)}\\
+\addlinespace
+1 & \makecell[c]{4.06\\(9.99)} & \makecell[c]{0.27\\(2.39)} & \makecell[c]{0.89\\(2.09)}\\
+\addlinespace
+2 & \makecell[c]{4.16\\(9.56)} & \makecell[c]{0.6\\(2.2)} & \makecell[c]{1.84\\(3.97)}\\
+\addlinespace
+3 & \makecell[c]{-1.36\\(3.58)} & \makecell[c]{-0.08\\(2.88)} & \makecell[c]{0.26\\(1.22)}\\
+\addlinespace
+Average & \makecell[c]{3.1\\(6.78)} & \makecell[c]{0.04\\(2.07)} & \makecell[c]{0.85\\(2.05)}\\
+\bottomrule
+\end{tabular}
+```
+
+### Spatial-First Difference - ATT Effects {#sfd_estimates}
+
+![](./figs/model_results/sfd/summary_att.pdf)
