Adding final method doc
Incorporating edits based on comments from two QA reviewers.

--- a/methods_doc.Rmd
+++ b/methods_doc.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Preface
 
-This document outlines the methods used to analyze Crime-Free Housing (CFH) programs in Arizona. In most instances, these methods follow the approaches used in Griswold et al., 2023 and Griswold et al., 2024. This document is structured for an internal QA review, with a focus on conciseness rather than ean exhaustive method explanation. 
+This document outlines the methods used to analyze Crime-Free Housing (CFH) programs in Arizona. In most instances, these methods follow the approaches used in Griswold et al., 2023 and Griswold et al., 2024. This document is structured for an internal QA review, with a focus on conciseness rather than an exhaustive method explanation. 
 
 [Section one](#data) describes the data used in this analysis, [section two](#crime) details the methods used to analyze program effects on crime across cities, [section three](#evictions) investigates the impact of CFH on eviction filings within cities, and [section four](#demographics) provides a description of sociodemographic differences across cities and neighborhood blocks with and without CFHs. Each of these sections also contains short-write up of findings to be sent to the AZ republic, describing the results in plain language [Section five](#audience) concludes with a short-form description of the methods in section 1 -4. This description is intended for general audiences and would be provided to the AZ Republic to be printed along with their reporting.
 
@@ -26,7 +26,7 @@ This document outlines the methods used to analyze Crime-Free Housing (CFH) prog
 
 ### Treatment data {#treat_data}
 
-Treatment data was obtained from AZ Republic, who reviewed ordinances in AZ to determine which sites had active crime-free housing programs. Dates were obtained from public record requests. I reviewed the ordinances, program websites, and public record emails AZ Republic received and found them consistent with the types of records we reviewed for the RAND report. For one site, I was not able to confirm the date or program existence (Bullhead City) and removed this site from the analysis. Data on treated cities and dates are available in the [GitHub repository](https://github.com/maxgriswold/cfh_az/tree/main) within the "data/crime_free_housing" folder. Similar to the RAND report, I restricted treated sites to those which implemented a program between 2009 and 2023, given the availability of 5-year ACS surveys @ACS2023.
+Treatment data was obtained from AZ Republic, who reviewed ordinances in AZ to determine which sites had active crime-free housing programs. Dates were obtained from public record requests. I reviewed the ordinances, program websites, and public record emails AZ Republic received and found them consistent with the types of records we reviewed for the RAND report. For one site, I was not able to confirm the date or program existence (Bullhead City) and removed this site from the analysis. Data on treated cities and dates are available in the [GitHub repository](https://github.com/maxgriswold/cfh_az/tree/main) within the "data/crime_free_housing" folder. Like the RAND report, I restricted treated sites to those which implemented a program between 2009 and 2023, given the availability of 5-year ACS surveys @ACS2023. Treated sites had staggered adoption, with the first available treated unit implementing a policy in 2014 and the last treated unit adopting a policy in 2020.
 
 AZ republic also provided Excel sheets which indicates properties certified as crime-free within several cities in 2023. These files were comparable to those used in the RAND report. I geocoded these addresses using a combination of the census API, ArcGIS API, and openstreetmaps API. I validated these geocodes by comparing obtained zip codes with those listed in the address. Geocodes were merged with census TIGER shapefiles to identify which census-block groups contained crime-free housing units.
 
@@ -40,7 +40,7 @@ Data on total crime counts, assaults, and burglaries were obtained from the Unif
 
 #### Filed evictions
 
-The AZ Republic provided data on filed evictions in Mesa county, which were obtained from the Maricopa County Superior Court. Following the same procedures as Griswold, 2024 @griswold2024analyzing, I geocoded obtained records for the year 2023, then merged these records to TIGER shapefiles for Census block-groups. Filing counts were then aggregated within each block-group.
+The AZ Republic provided data on filed evictions in Maricopa county, which were obtained from the Maricopa County Superior Court. Following the same procedures as Griswold, 2024 @griswold2024analyzing, I geocoded obtained records for the year 2023, then merged these records to TIGER shapefiles for Census block-groups. Filing counts were then aggregated within each block-group.
 
 ### Covariates {#covariate_data}
 
@@ -52,7 +52,7 @@ I followed the general strategy in Griswold, 2023 @griswold2023evaluation to est
 
 Using a Callaway and Sant'Anna difference-in-difference estimator @callaway2021difference, I estimated unadjusted and adjusted models for total crime rates, total assault rates, and total burglary rates. Adjusted models included controls for population proportions by race/ethnicity, median income (in 2023 dollars), and total population. I estimated models using not-yet-treated groups as controls, computed group-time average effects using a doubly-robust approach, and used models to estimate dynamic treatment effects. Model tables with estimates for relative time following treatment can be found in [the appendix](#csa_estimates). I did not find a large difference in estimated effects across the unadjusted and adjusted models.
 
-I checked [event-study plots](https://github.com/maxgriswold/cfh_az/blob/main/figs/model_results/csa/event_study.pdf) for the possible existence of parallel trends, following recommendations in Roth, 2024 @roth2024interpreting which suggests this approach can be valid if the first year prior to treatment is used as the reference category. I did not notice severe violations of parallel trends in these plots.
+I checked [event-study plots](https://github.com/maxgriswold/cfh_az/blob/main/figs/model_results/csa/event_study.pdf) for evidence consistent with a parallel trends assumption, following recommendations in Roth, 2024 @roth2024interpreting which suggests this approach can be valid if the first year prior to treatment is used as the reference category. I did not notice severe violations of parallel trends in these plots.
 
 Given the small sample size (54 units, 4 treated), I also estimated treatment effects using the augmented synthetic control method @ben2021augmented. In my applied work, I have found this method more reliably estimates unbiased policy effects when there is a small number of treated units and larger number of controls. I continued to estimate both unadjusted and adjusted models for each outcome. For adjusted models, I followed existing recommendations @ben2021augmented- @pickett2022myths to use a ridge regression (L2 regularization) to improve pretreatment fit. To choose $\lambda$ for L2 regularization in each model, I performed a [grid-search](https://github.com/maxgriswold/cfh_az/blob/main/figs/model_results/multisynth/lambda_search_full_data.pdf) over parameter values between 0.01 and 100, selecting values that minimized imbalance. I then estimated dynamic treatment effects for each outcome and model specification, which can be found in [the appendix](#ascm_estimates). I did not find a large difference in estimated effects across the unadjusted and adjusted models.
 
@@ -68,7 +68,7 @@ Using the estimated effects in the [results table](#ascm_estimates), I calculate
 
 Based on the analysis results, I intend to describe these findings to the AZ republic using the following language:
 
-> Comparing arrest rates between Arizona municipalities with and without crime-free housing programs, both before and after program implementation, we are unable to detect any effect of these programs on total crimes, assaults, or burglaries.
+> Comparing between similar Arizona municipalities with and without crime-free housing programs, both before and after program implementation, we do not detect any effect of these programs on total crimes, assaults, or burglaries.
 
 I also intend to provide a simpler figure which plots average outcomes within treated units following treatment and never-treated units. The intention is to demonstrate a similar finding to those in the analysis, using a more interpretable figure for a general audience.
 
@@ -78,9 +78,11 @@ I also intend to provide a simpler figure which plots average outcomes within tr
 
 I followed the same procedures as those in Griswold, 2024 @griswold2023evaluation to analyze the effect of crime-free housing on filed evictions within the cities of Chandler, Avondale, and Mesa (the set of cities which had available eviction filing data and data on crime-free housing certified property addresses). All [code for this analysis](https://github.com/maxgriswold/cfh_az/blob/main/code/03_analyze_eviction_effects.R) is available in the repo. 
 
-This approach entailed using a spatial first differences estimator @druckenmiller2018accounting to compare block-groups which had properties certified as crime-free to block-groups which do not contain any crime-free certified rental units. I removed any block-groups which did not contain rental units. Additionally, given there was a larger number of filings compared to the executed evictions analyzed in Griswold, 2024, I transformed the outcome variable into an eviction filing rate per 100 renting households.
+This approach entailed using a spatial first differences estimator @druckenmiller2018accounting to compare block-groups which had properties certified as crime-free to block-groups which do not contain any crime-free certified rental units. I am using a spatial-first differences estimator because I do not have longitudinal data on evictions or certified properties. Due to COVID pandemic, eviction filings were only available for 2019, 2023, and 2024. Data on CFH certified properties was only available for 2023. Accordingly, I am using spatial variation to identify a treatment effect.
 
-I again estimated unadjusted and adjusted models, using the same covariates as those used in [Section 2](#crime). I also estimated models defining treatment as a binary variable (Did the block-group have one or more units certified as crime-free?) and as a continuous variable (How many units were certified as crime-free in the block-group?). As per Griswold, 2024, I estimated each model at a given map angle in 30$^{\circ}$ increments between 0$^{\circ}$ and 360$^{\circ}$. I did not find a difference in estimated results across map angles, and interpreted the average effect across map angles. Estimated effects for each model and city can be found [in the appendix](#sfd_estimates). I did not find a large difference in estimated effects across the unadjusted and adjusted models, or across different parameterizations of treatment. Estimated effects are comparable in magnitude to those in the RAND report. 
+From the analysis dataset, I removed any block-groups which did not contain rental units. Additionally, given there was a larger number of filings compared to the executed evictions analyzed in Griswold, 2024, I transformed the outcome variable into an eviction filing rate per 100 renting households.
+
+I again estimated unadjusted and adjusted models, using the same covariates as those used in [Section 2](#crime). I also estimated models defining treatment as a binary variable (Did the block-group have one or more units certified as crime-free?) and as a continuous variable (How many units were certified as crime-free in the block-group?). As per Griswold, 2024, I estimated after rotating a city's map in 30$^{\circ}$ increments between 0$^{\circ}$ and 360$^{\circ}$, using a pathing algorithm to assign each block an immediate adjacent neighbor. I did not find a difference in estimated results across map angles, and interpreted the average effect across map angles. Estimated effects for each model and city can be found [in the appendix](#sfd_estimates). I did not find a large difference in estimated effects across the unadjusted and adjusted models, by map angle, or across different definitions of treatment. Estimated effects are comparable in magnitude to those in the RAND report. 
 
 To present results to the AZ republic, I am using estimates from the most "conservative" model (continuous treatment using an adjusted specification). Similar to the RAND report, I transformed estimates into an ATT percentage change, based on the average observed eviction filing rate within treated units. 
 
@@ -106,15 +108,17 @@ I also calculated similar statistics within cities, comparing averages across tr
 
 Based on these results, I intend to describe these findings to the AZ republic using the following language:
 
-> In 2023, cities with crime-free housing programs had larger Black and Asian populations than cities without these programs. Within three studied cities, we find that block-groups with certified crime-free housing units had lower median income ($36k less in Mesa, $37k in Chandler, and $28k in Avondale) and more Black households (in Chandler and Mesa) than block-groups without certified units.
+> In 2023, the average city with a crime-free housing programs had larger Black and Asian populations than the average city without a program. Within three studied cities, we find that block-groups with certified crime-free housing units had lower median income ($36k less in Mesa, $37k in Chandler, and $28k in Avondale) and more Black households (in Chandler and Mesa) than block-groups without certified units.
 
 ## Section 5. General Audience Method Description {#audience}
 
 The AZ republic requested text which described the RAND methods in two to three paragraphs. I intend to send them the following text to describe the approaches (which would be copy-edited by their team, then reviewed by me/RAND).
 
-> To assess the impact of crime-free housing programs, we analyzed crime and eviction trends in Arizona cities with and without these programs. Our analysis relied on data from the FBI Uniform Crime Reporting Program, municipal ordinances, and public records requests. We examined changes in crime rates—including total crime, assaults, and burglaries—before and after these programs were introduced, comparing cities that adopted crime-free housing policies to those that did not. We used two widely accepted statistical approaches: a difference-in-differences method and a synthetic control method, both of which help isolate the program’s effect from other factors that may influence crime trends.
-  To evaluate the impact on evictions, we analyzed court records of filed evictions in three cities—Avondale, Chandler, and Mesa—along with data on rental properties certified as crime-free. Using a spatial first-differences approach, we compared eviction rates in neighborhoods with certified crime-free housing to those in similar nearby neighborhoods without certified properties. This method helps account for underlying differences between neighborhoods, improving the reliability of these comparisons.
-  Finally, we examined demographic differences between cities and neighborhoods with and without crime-free housing programs using data from the U.S. Census Bureau. We compared factors like income, race, and housing characteristics to identify whether these programs are more common in certain types of communities. Statistical tests were used to determine whether observed differences were significant.
+> To assess the impact of crime-free housing programs, we analyzed crime and eviction trends in Arizona cities with and without these programs. Our analysis relied on data from the FBI Uniform Crime Reporting Program, municipal ordinances, and public records requests. We examined changes in crime rates—including total crime, assaults, and burglaries—before and after these programs were introduced, comparing cities that adopted crime-free housing policies to similar cities that did not. We used two widely accepted statistical approaches: a difference-in-differences design and a synthetic control design, both of which help isolate the program’s effect from other factors that may influence crime trends.
+
+> To evaluate the impact on evictions, we analyzed court records of filed evictions in three cities—Avondale, Chandler, and Mesa—along with data on rental properties certified as crime-free. Using a spatial first-differences design, we compared eviction rates in neighborhoods with certified crime-free housing to those in similar nearby neighborhoods without certified properties. This method helps account for underlying differences between neighborhoods, improving the reliability of these comparisons.
+
+> Finally, we examined demographic differences between cities and neighborhoods with and without crime-free housing programs using data from the U.S. Census Bureau. We compared factors like income, race, and housing characteristics to identify whether these programs are more common in certain types of communities. Statistical tests were used to determine whether observed differences were significant.
 
 ## References
 
